// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete when no properties are set matches snapshot 1`] = `
Array [
  <div
    className="tm-search-input "
  >
    <input
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      tabIndex="0"
      type="search"
      value=""
    />
    <button
      className="tm-bt"
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      tabIndex="0"
      title=""
      type="button"
    >
      go
    </button>
  </div>,
  <div
    className="tm-list-container tm-hidden"
  />,
]
`;

exports[`Autocomplete when properties are set should match snapshot 1`] = `
Array [
  <div
    className="tm-search-input "
  >
    <input
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      tabIndex="0"
      type="search"
      value="fooval"
    />
    <button
      className="tm-bt"
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      tabIndex="0"
      title=""
      type="button"
    >
      go
    </button>
  </div>,
  <div
    className="tm-list-container"
  >
    <ul
      className="tm-list"
      role="menu"
    >
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        qux
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        quux
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        corge
      </li>
    </ul>
    <hr />
    my_foo_title
    <ul
      className="tm-list"
      role="menu"
    >
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        foo
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        bar
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        foo2
      </li>
    </ul>
  </div>,
]
`;

exports[`Autocomplete when properties are set should match snapshot showing list 1`] = `
Array [
  <div
    className="tm-search-input "
  >
    <input
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      tabIndex="0"
      type="search"
      value="fooval"
    />
    <button
      className="tm-bt"
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      tabIndex="0"
      title=""
      type="button"
    >
      go
    </button>
  </div>,
  <div
    className="tm-list-container"
  >
    <ul
      className="tm-list"
      role="menu"
    >
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        qux
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        quux
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        corge
      </li>
    </ul>
    <hr />
    my_foo_title
    <ul
      className="tm-list"
      role="menu"
    >
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        foo
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        bar
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        foo2
      </li>
    </ul>
  </div>,
]
`;

exports[`Autocomplete when properties are set should match snapshot without defaultItems 1`] = `
Array [
  <div
    className="tm-search-input "
  >
    <input
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      tabIndex="0"
      type="search"
      value="fooval"
    />
    <button
      className="tm-bt"
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      tabIndex="0"
      title=""
      type="button"
    >
      go
    </button>
  </div>,
  <div
    className="tm-list-container"
  >
    <ul
      className="tm-list"
      role="menu"
    >
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        qux
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        quux
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        corge
      </li>
    </ul>
    my_foo_title
  </div>,
]
`;

exports[`Autocomplete when properties are set should match snapshot without items 1`] = `
Array [
  <div
    className="tm-search-input "
  >
    <input
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      tabIndex="0"
      type="search"
      value="fooval"
    />
    <button
      className="tm-bt"
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      tabIndex="0"
      title=""
      type="button"
    >
      go
    </button>
  </div>,
  <div
    className="tm-list-container"
  >
    my_foo_title
    <ul
      className="tm-list"
      role="menu"
    >
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        foo
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        bar
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        foo2
      </li>
    </ul>
  </div>,
]
`;

exports[`Autocomplete when properties are set should match snapshot without items and defaultItems 1`] = `
Array [
  <div
    className="tm-search-input "
  >
    <input
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      tabIndex="0"
      type="search"
      value="fooval"
    />
    <button
      className="tm-bt"
      onKeyPress={[Function]}
      onMouseDown={[Function]}
      tabIndex="0"
      title=""
      type="button"
    >
      go
    </button>
  </div>,
  <div
    className="tm-list-container tm-hidden"
  >
    my_foo_title
  </div>,
]
`;
